# promptshield

./: .gitignore  PRE_RELEASE_CHECKLIST.md  README.md  REQUIREMENTS.md  SETUP.md  analyze_orgs.py  build-nuitka.ps1  build-standalone.ps1  build-update-package.ps1  debug-p2.json  dev-licensing.ps1  dev-tauri.ps1  dev.ps1  dev.sh  restart.ps1  setup.ps1  start.ps1
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: integrity.rs  lib.rs  license.rs  machine_id.rs  main.rs  updater.rs
src-licensing/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  alembic.ini  auth.py  config.py  crypto.py  database.py  generate_keys.py  main.py  models.py  pyproject.toml  rate_limit.py  schemas.py  structured_logging.py
src-licensing/alembic/: env.py
src-licensing/alembic/versions/: 20250101_add_trial_machines.py
src-licensing/routers/: admin.py  auth.py  billing.py  license.py  updates.py
src-python/: AUDIT_REPORT.md  _audit.py  _audit_analyze.py  _audit_dump.json  _audit_noise_test.py  _bulk_audit.py  _check_region.py  _count_regions.py  _debug_addr.py  _debug_gliner.py  _debug_pages.py  _debug_regex.py  _debug_regions.py  _diag_out2.txt  _dump_blocks.py  _redetect.py  _simple_test.py  _test_detection.py  _test_full_detection.py  _test_quebec_company.py  _test_stopwords.py  doc-anonymizer-standalone.spec  doc-anonymizer.spec  main.py  pyproject.toml
src-python/api/: csrf.py  deps.py  rate_limit.py  repository.py  server.py
src-python/api/routers/: __init__.py  anonymize.py  detection.py  detokenize.py  documents.py  llm.py  regions.py  settings.py  shell.py  vault.py
src-python/core/: config.py  detokenize_file.py  text_utils.py
src-python/core/anonymizer/: __init__.py  engine.py  utils.py
src-python/core/detection/: __init__.py  bbox_utils.py  bert_detector.py  block_offsets.py  cross_line.py  detection_config.py  gliner_detector.py  language.py  layout.py  llm_detector.py  merge.py  ner_detector.py  ner_stopwords.py  ner_types.py  noise_filters.py  pipeline.py  propagation.py  regex_detector.py  regex_patterns.py  region_shapes.py
src-python/core/detection/dictionaries/: de.txt  download_dictionaries.py  en.txt  es.txt  fr.txt  it.txt  (+2 more)
src-python/core/ingestion/: __init__.py  loader.py
src-python/core/llm/: __init__.py  engine.py  remote_engine.py
src-python/core/ocr/: __init__.py  engine.py
src-python/core/persistence/: __init__.py  store.py
src-python/core/vault/: __init__.py  store.py  store.py.bak
src-python/models/: __init__.py  schemas.py
src-python/tests/: test_accent_propagation.py  test_anonymizer_engine.py  test_bbox_utils.py  test_cross_line.py  test_detokenize_file.py  test_german_compound.py  test_italian.py  test_language.py  test_layout.py  test_llm_detector.py  test_merge.py  test_ner_detector.py  test_noise_filters.py  test_ocr_engine.py  test_offset_alignment.py  test_partial_org_propagation.py  test_regex_bulletproof.py  test_regex_detector.py  test_region_shapes.py  test_routers.py  test_server.py  test_text_utils.py  test_upload_parallel.py  test_vault.py  test_visual_grouping.py
(+121 files in other folders)
